5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1637_2703.log
== TEST (2019-04-08 15:12:49) 
-- CODE:
idade = int(input("Digite aqui a idade desejada: "))

if(idade >== 18):
	msg = eleitor
else:
	msg = nao_eleitor

print(msg)
-- ERROR:
File "XXXX", line 3
    if(idade >== 18):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:25) 
-- CODE:
idade = int(input("Digite aqui a idade desejada: "))

if(idade ==> 18):
	msg = eleitor
else:
	msg = nao_eleitor

print(msg)
-- ERROR:
File "XXXX", line 3
    if(idade ==> 18):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:51) 
-- CODE:
idade = int(input("Digite aqui a idade desejada: "))

if(idade >= 18):
	msg = eleitor
else:
	msg = nao_eleitor

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:06) 
-- CODE:
idade = int(input("Digite aqui a idade desejada: "))

if (idade >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"

print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:15) 
-- CODE:
idade = int(input("Digite aqui a idade desejada: "))

if (idade >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"

print(msg)
-- EXECUTION TIME:
0.119295
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
